
syntax = "proto3";

option java_package = "com.oes.openfmb.proto";

enum ENG_CalcMethodKind {
  noneENG_CalcMethodKind  = 0;
  SP    = 11;
}


